--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="links.html">LINKS</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="blog.html">BLOG</a></li>
       </ul>
     </div>
   </div>
