--- a/about.html
+++ b/about.html
@@ -214,8 +214,8 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Home</h1> 
-  <p>About Page</p> 
+  <h1>About Page</h1> 
+  <p>The Info Webpage About Node.js</p> 
   <form>
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
