--- a/about.html
+++ b/about.html
@@ -214,7 +214,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>About Page</h1> 
+  <h1>About</h1> 
   <p>The Info Webpage About Node.js</p> 
   <form>
     <div class="input-group">
